chore(surcharges): add Canada surcharge (CA +.50)

--- a/archivos-correctos_20251017_003431_index.html
+++ b/archivos-correctos_20251017_003431_index.html
@@ -3406,7 +3406,6 @@
         // Surcharges
         const crSurcharge = 1.75;
         const usSurcharge = 4.20;
-        const caSurcharge = 2.50;
 
     let currentCountry = 'usa';
     let currentLanguage = 'es';
@@ -3689,7 +3688,6 @@
             const countryData = exchangeRates[currentCountry];
             const isCR = currentCountry === 'costarica';
             const isUSA = currentCountry === 'usa';
-            const isCA = currentCountry === 'canada';
             const translation = translations[currentLanguage];
 
             container.innerHTML = '';
@@ -3710,8 +3708,6 @@
                         finalUSDPrice = currentBasePrice + crSurcharge;
                     } else if (isUSA) {
                         finalUSDPrice = currentBasePrice + usSurcharge;
-                    } else if (isCA) {
-                        finalUSDPrice = currentBasePrice + caSurcharge;
                     }
                 } else {
                     // Regular plan without switch
@@ -3724,8 +3720,6 @@
                         finalUSDPrice = plan.basePrice + crSurcharge;
                     } else if (isUSA) {
                         finalUSDPrice = plan.basePrice + usSurcharge;
-                    } else if (isCA) {
-                        finalUSDPrice = plan.basePrice + caSurcharge;
                     }
                 }
 
@@ -3755,13 +3749,14 @@
                     const hintClass = (typeof variantTouched[index] !== 'undefined' && !variantTouched[index]) ? ' hint' : '';
 
                     if (plan.onlyThreeDevices) {
-                        // Render only the 3-device option visually (active) - hide price inside switch
+                        // Render only the 3-device option visually (active)
                         deviceSwitchHTML = `
                             <div class="device-switch-container">
                                 <div class="device-switch-label">${translation.deviceSwitchLabel || 'Número de Dispositivos'}</div>
                                 <div class="device-switch" onclick="toggleCardDetails(${index})">
                                     <div class="device-option active">
                                         3 ${translation.devicesText || 'Dispositivos'}
+                                        <div class="device-price-diff">$${price3Devices.toFixed(2)}</div>
                                     </div>
                                 </div>
                             </div>
@@ -3773,9 +3768,11 @@
                                 <div class="device-switch${hintClass}" onclick="toggleDeviceSwitch(${index})">
                                     <div class="device-option ${!is3Devices ? 'active' : ''}">
                                         1 ${translation.deviceText || 'Dispositivo'}
+                                        <div class="device-price-diff">$${price1Device.toFixed(2)}</div>
                                     </div>
                                     <div class="device-option ${is3Devices ? 'active' : ''}">
                                         3 ${translation.devicesText || 'Dispositivos'}
+                                        <div class="device-price-diff">$${price3Devices.toFixed(2)}</div>
                                     </div>
                                 </div>
                             </div>
@@ -4083,8 +4080,6 @@ document.addEventListener('DOMContentLoaded', function() {
                 basePrice += crSurcharge;
             } else if (isUSA) {
                 basePrice += usSurcharge;
-            } else if (isCA) {
-                basePrice += caSurcharge;
             }
 
             const options = selectedPaymentType === 'subscription' ?
