chore: update branding and layout tweaks for index and streaming

--- a/streaming.html
+++ b/streaming.html
@@ -16,7 +16,7 @@
         :root {
             --primary: #1e3c72;
             --primary-light: #2a5298;
-            --secondary: #667eea;
+            --secondary: #010825;
             --accent: #764ba2;
             --card-bg: #ffffff;
             --card-radius: 14px;
