index.html-streaming.html color modified

--- a/streaming.html
+++ b/streaming.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Skyplay Streaming </title>
     <link rel="icon" href="assets/imagen/Favicon2.png" type="image/png">
-    <meta name="description" content="Los mejores planes de streaming. Cancela cuando quieras.">
+    <meta name="description" content="Los mejores planes de streaming. ">
     <style>
         * {
             margin: 0;
