--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Skyplay Streaming </title>
     <link rel="icon" href="assets/imagen/Favicon2.png" type="image/png">
-    <meta name="description" content="Los mejores planes de streaming IPTV para Latinoamérica. +1000 canales, series, películas y deportes. Cancela cuando quieras.">
+    <meta name="description" content="Los mejores planes de streaming IPTV. +1000 canales, series, películas y deportes. Cancela cuando quieras.">
     <style>
         * {
             margin: 0;
