--- a/muckup-index.copy.html
+++ b/muckup-index.copy.html
@@ -7,6 +7,50 @@
     <link rel="icon" href="assets/imagen/Favicon2.png" type="image/png">
     <meta name="description" content="Los mejores planes de streaming IPTV para Latinoamérica. +1000 canales, series, películas y deportes. Cancela cuando quieras.">
     <style>
+    body {
+        background: linear-gradient(135deg, #1a2340 0%, #232a4d 100%);
+        color: #f5f6fa;
+    }
+    .section-title, h2, h3, h4, h1 {
+        color: #fff;
+        font-family: 'Montserrat', 'Segoe UI', Arial, sans-serif;
+        font-weight: 700;
+        letter-spacing: 0.5px;
+    }
+    .section-title strong, h2 strong, h3 strong, h4 strong, h1 strong {
+        color: #5cc6ff;
+    }
+    .section-title .highlight, h2 .highlight, h3 .highlight, h4 .highlight, h1 .highlight {
+        color: #b97cff;
+    }
+    .wholesale-banner, .top-bar {
+        background: linear-gradient(90deg, #232a4d 0%, #1a2340 100%);
+        color: #f5f6fa;
+        border-radius: 0 0 18px 18px;
+        box-shadow: 0 2px 16px rgba(34, 42, 77, 0.12);
+    }
+    .wholesale-btn, .products-btn, .create-wholesale-account-btn, #apkDownloadBtn {
+        background: linear-gradient(90deg, #5cc6ff 0%, #b97cff 100%);
+        color: #fff !important;
+        border: none;
+        font-weight: 700;
+        box-shadow: 0 2px 8px rgba(34,42,77,0.08);
+        transition: background 0.2s, box-shadow 0.2s;
+    }
+    .wholesale-btn:hover, .products-btn:hover, .create-wholesale-account-btn:hover, #apkDownloadBtn:hover {
+        background: linear-gradient(90deg, #b97cff 0%, #5cc6ff 100%);
+        box-shadow: 0 4px 16px rgba(34,42,77,0.18);
+    }
+    .wholesale-text, .top-bar, .footer, .footer-content {
+        color: #ffffff;
+    }
+    .footer {
+        background: #232a4d;
+        color: #f5f6fa;
+    }
+    .footer a {
+        color: #5cc6ff;
+    }
         * {
             margin: 0;
             padding: 0;
@@ -96,7 +140,7 @@
         /* Wholesale Button */
         .wholesale-banner {
             background: linear-gradient(135deg, #f59e0b 0%, #d97706 100%);
-            color: white;
+            color: rgb(255, 255, 255);
             text-align: center;
             padding: 12px 20px;
             margin: 0 20px 20px;
@@ -115,15 +159,19 @@
             align-items: center;
             justify-content: center;
             gap: 15px;
-            flex-wrap: wrap;
+            flex-wrap: nowrap;
             position: relative;
+            width: 100%;
+            min-width: 0;
         }
 
         .wholesale-actions {
             display: flex;
             align-items: center;
-            gap: 12px;
-            flex-wrap: wrap;
+            justify-content: center;
+            gap: 0;
+            flex-wrap: nowrap;
+            width: 100%;
         }
 
         .wholesale-text {
@@ -133,7 +181,7 @@
 
         .wholesale-btn {
             background: rgba(255, 255, 255, 0.2);
-            color: white;
+            color: rgb(255, 255, 255);
             border: 2px solid rgba(255, 255, 255, 0.3);
             padding: 8px 20px;
             border-radius: 25px;
@@ -156,7 +204,7 @@
         }
 
         .create-wholesale-account-btn {
-            background: rgba(255, 255, 255, 0.9);
+            background: rgba(60, 7, 206, 0.9);
             color: #d97706;
             border: 2px solid rgba(255, 255, 255, 0.9);
             padding: 8px 18px;
@@ -172,7 +220,7 @@
         }
 
         .create-wholesale-account-btn:hover {
-            background: white;
+            background: rgb(255, 255, 255);
             transform: translateY(-2px);
             box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
         }
@@ -197,7 +245,7 @@
         .container {
             max-width: 1400px;
             margin: 20px auto;
-            background: white;
+            background: rgb(255, 255, 255);
             border-radius: 20px;
             box-shadow: 0 20px 60px rgba(0,0,0,0.3);
             overflow: hidden;
@@ -520,7 +568,7 @@
         .provider-initial { font-size: 32px; line-height: 1; font-family: 'Poppins', system-ui, -apple-system, 'Segoe UI', Roboto, 'Helvetica Neue', Arial; }
 
         .avatar-default { background: #374151; }
-        .avatar-flujo-tv { background: #113CCF; }
+        .avatar-flujo-tv { background: #cf5d11; }
     /* MAGISTV avatar: white background with intense red initial for better contrast */
     .avatar-magistv {
         background: #ffffff; /* white background */
@@ -528,7 +576,7 @@
         border: 3px solid rgba(200,16,46,0.12); /* subtle red-tinted border */
         box-shadow: 0 8px 22px rgba(200,16,46,0.06); /* soft red shadow for separation */
     }
-        .avatar-tele-latino { background: #F97316; }
+        .avatar-tele-latino { background: #f91616; }
 
         /* Details overlay inside card (visual only) */
         /* Positioned to float above the card bottom; initial translateY makes it feel like it rises into view */
@@ -1845,7 +1893,7 @@
         }
 
         .wholesale-modal-content {
-            background: white;
+            background: rgb(255, 255, 255);
             border-radius: 20px;
             max-width: 600px;
             width: 100%;
@@ -1857,7 +1905,7 @@
 
         .wholesale-modal-header {
             background: linear-gradient(135deg, var(--primary-dark) 0%, var(--primary) 100%);
-            color: white;
+            color: rgb(34, 33, 33);
             padding: 30px;
             border-radius: 20px 20px 0 0;
             text-align: center;
@@ -1921,8 +1969,8 @@
         .wholesale-submit-btn {
             width: 100%;
             padding: 14px;
-            background: linear-gradient(135deg, var(--success) 0%, #059669 100%);
-            color: white;
+            background: linear-gradient(135deg, var(--success) 0%, #2602f3 100%);
+            color: rgb(247, 242, 242);
             border: none;
             border-radius: 8px;
             font-size: 16px;
@@ -1934,7 +1982,7 @@
 
         .wholesale-submit-btn:hover {
             transform: translateY(-2px);
-            box-shadow: 0 10px 20px rgba(16, 185, 129, 0.3);
+            box-shadow: 0 10px 20px rgba(53, 16, 185, 0.3);
         }
 
         .wholesale-submit-btn:disabled {
@@ -1949,7 +1997,7 @@
             right: 20px;
             background: none;
             border: none;
-            color: white;
+            color: rgb(252, 250, 250);
             font-size: 24px;
             cursor: pointer;
             padding: 5px;
@@ -2097,11 +2145,11 @@
 
         .btn-secondary {
             background: var(--success);
-            color: white;
+            color: rgb(248, 247, 247);
         }
 
         .btn-secondary:hover {
-            background: #059669;
+            background: #2e9605;
             transform: translateY(-2px);
         }
 
@@ -2181,12 +2229,12 @@
 .wholesale-actions .products-btn,
 .wholesale-actions .wholesale-btn {
     padding: 8px 18px;
-    border-radius: 20px;
-    background: #fff;
+    border-radius: 50px;
+    background: #ffffff;
     color: #d97706;
-    font-weight: 600;
+    font-weight: 500;
     border: none;
-    box-shadow: 0 2px 8px rgba(0,0,0,0.04);
+    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.04);
     cursor: pointer;
     font-size: 1rem;
     margin-left: 8px;
@@ -2200,7 +2248,7 @@
 }
     </style>
 </head>
-<body>
+    <body style="background: linear-gradient(135deg, #1a2340 0%, #232a4d 100%); color: #0e2580;">
     <!-- Top Bar -->
     <div class="top-bar">
         <div class="contact-info">
@@ -2232,16 +2280,22 @@
                     <span id="createWholesaleAccountText">Crea una cuenta mayorista</span>
                 </button>
                 <!-- Products Banner -->
-    <div class="header-products" style="display:flex;align-items:center;gap:12px;margin-top:10px;">
-      <button class="products-btn" id="productsBtn" onclick="toggleProductsMenu()" style="padding:8px 18px;border-radius:20px;background:#fff;color:#d97706;font-weight:600;border:none;box-shadow:0 2px 8px rgba(0,0,0,0.04);cursor:pointer;">
-      <span id="productsBtnText">Productos</span> <span class="products-arrow">▼</span>
-      </button>
-      <div class="products-menu" id="productsMenu" style="display:none;position:absolute;z-index:1000;background:#fff;border-radius:12px;box-shadow:0 2px 8px rgba(0,0,0,0.08);padding:10px 0;top:40px;">
-      <a href="#plansTitle" id="productIptv" target="_self" style="display:block;padding:8px 24px;color:#d97706;text-decoration:none;font-weight:500;">IPTV</a>
-    <a href="./streaming.html" id="productStreaming" target="_self" style="display:block;padding:8px 24px;color:#d97706;text-decoration:none;font-weight:500;">Streaming</a>
-      <a href="https://landing-pines.com" id="productPines" target="_blank" style="display:block;padding:8px 24px;color:#d97706;text-decoration:none;font-weight:500;">Pines</a>
-      </div>
-    </div>
+
+            <div class="header-products" style="display:flex;align-items:center;justify-content:center;gap:0;margin-top:10px;width:100%;flex-wrap:nowrap;">
+                <div style="position:relative;display:flex;align-items:center;">
+                    <button class="products-btn" id="productsBtn" onclick="toggleProductsMenu()" style="padding:8px 18px;border-radius:20px;background:#fff;color:#d97706;font-weight:600;border:none;box-shadow:0 2px 8px rgba(0,0,0,0.04);cursor:pointer;display:inline-flex;align-items:center;white-space:nowrap;margin-right:8px;">
+                        <span id="productsBtnText">Productos</span> <span class="products-arrow">▼</span>
+                    </button>
+                    <div class="products-menu" id="productsMenu" style="display:none;position:absolute;z-index:1000;background:#fff;border-radius:12px;box-shadow:0 2px 8px rgba(0,0,0,0.08);padding:10px 0;top:40px;left:0;">
+                        <a href="#plansTitle" id="productIptv" target="_self" style="display:block;padding:8px 24px;color:#d97706;text-decoration:none;font-weight:500;">IPTV</a>
+                        <a href="./streaming.html" id="productStreaming" target="_self" style="display:block;padding:8px 24px;color:#d97706;text-decoration:none;font-weight:500;">Streaming</a>
+                        <a href="https://landing-pines.com" id="productPines" target="_blank" style="display:block;padding:8px 24px;color:#d97706;text-decoration:none;font-weight:500;">Pines</a>
+                    </div>
+                </div>
+                <button class="products-btn" id="apkDownloadBtn" onclick="window.location.href='descargas.html'" style="padding:8px 18px;border-radius:20px;background:#fff;color:#d97706;font-weight:600;border:none;box-shadow:0 2px 8px rgba(0,0,0,0.04);cursor:pointer;display:inline-flex;align-items:center;white-space:nowrap;">
+                    <span id="apkDownloadBtnText">Descargas APK</span>
+                </button>
+            </div>
             </div>
         </div>
     </div>
@@ -3406,6 +3460,7 @@
         // Surcharges
         const crSurcharge = 1.75;
         const usSurcharge = 4.20;
+        const caSurcharge = 2.50;
 
     let currentCountry = 'usa';
     let currentLanguage = 'es';
@@ -3688,6 +3743,7 @@
             const countryData = exchangeRates[currentCountry];
             const isCR = currentCountry === 'costarica';
             const isUSA = currentCountry === 'usa';
+            const isCA = currentCountry === 'canada';
             const translation = translations[currentLanguage];
 
             container.innerHTML = '';
@@ -3708,6 +3764,8 @@
                         finalUSDPrice = currentBasePrice + crSurcharge;
                     } else if (isUSA) {
                         finalUSDPrice = currentBasePrice + usSurcharge;
+                    } else if (isCA) {
+                        finalUSDPrice = currentBasePrice + caSurcharge;
                     }
                 } else {
                     // Regular plan without switch
@@ -3720,6 +3778,8 @@
                         finalUSDPrice = plan.basePrice + crSurcharge;
                     } else if (isUSA) {
                         finalUSDPrice = plan.basePrice + usSurcharge;
+                    } else if (isCA) {
+                        finalUSDPrice = plan.basePrice + caSurcharge;
                     }
                 }
 
@@ -3749,14 +3809,13 @@
                     const hintClass = (typeof variantTouched[index] !== 'undefined' && !variantTouched[index]) ? ' hint' : '';
 
                     if (plan.onlyThreeDevices) {
-                        // Render only the 3-device option visually (active)
+                        // Render only the 3-device option visually (active) - hide price inside switch
                         deviceSwitchHTML = `
                             <div class="device-switch-container">
                                 <div class="device-switch-label">${translation.deviceSwitchLabel || 'Número de Dispositivos'}</div>
                                 <div class="device-switch" onclick="toggleCardDetails(${index})">
                                     <div class="device-option active">
                                         3 ${translation.devicesText || 'Dispositivos'}
-                                        <div class="device-price-diff">$${price3Devices.toFixed(2)}</div>
                                     </div>
                                 </div>
                             </div>
@@ -3768,11 +3827,9 @@
                                 <div class="device-switch${hintClass}" onclick="toggleDeviceSwitch(${index})">
                                     <div class="device-option ${!is3Devices ? 'active' : ''}">
                                         1 ${translation.deviceText || 'Dispositivo'}
-                                        <div class="device-price-diff">$${price1Device.toFixed(2)}</div>
                                     </div>
                                     <div class="device-option ${is3Devices ? 'active' : ''}">
                                         3 ${translation.devicesText || 'Dispositivos'}
-                                        <div class="device-price-diff">$${price3Devices.toFixed(2)}</div>
                                     </div>
                                 </div>
                             </div>
@@ -4080,6 +4137,8 @@ document.addEventListener('DOMContentLoaded', function() {
                 basePrice += crSurcharge;
             } else if (isUSA) {
                 basePrice += usSurcharge;
+            } else if (isCA) {
+                basePrice += caSurcharge;
             }
 
             const options = selectedPaymentType === 'subscription' ?
